--- a/aboutus.html
+++ b/aboutus.html
@@ -16,7 +16,22 @@
 </head>
 
 <body>
-
+  <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
+    <div class="container">
+      <button class="navbar-toggler"type="button" data-toggle="collapse" data-target="#Navbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand"href="#">Ristorane Con Fusion</a>
+      <div class="collapse navbar-collapse" id="Navbar">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
+            <li class="nav-item active"><a class="nav-link" href="#">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+          </ul>
+      </div>
+    </div>
+  </nav>
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -33,8 +48,12 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-               <h3>About Us</h3>
-               <hr>
+              <ol class="col-12 breadcrumb">
+                <li class="breadcrumb-item"> <a href="./index.html">Home</a></li>
+                <li class="breadcrumb-item active">About Us</li>
+              </ol>
+                 <h3>About Us</h3>
+                 <hr>
             </div>
         </div>
 
