--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <div class="modal-content">
               <div class="modal-header">
                   <h4 class="modal-title">Login </h4>
-                  <button type="button" class="close" data-dismiss="modal">&times;</button> <!-- Close modal -->
+                  <button type="button" class="close" data-dismiss="modal">&times;</button>  <!-- Close modal -->
               </div>
               <div class="modal-body">
                 <form>
@@ -86,13 +86,92 @@
                   <img src="img/logo.png" class="img-fluid" alt="logo">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
-                  <a role="button" class="btn btn-block nav-link btn-warning"
-                      data-toggle="tooltip" data-html="true"  title="Or Call us at  <br><strong>+852 12345678</strong>"
-                      data-placement="bottom" href="#reserve-table">Reserve Table</a>
+                  <!-- Button trigger modal -->
+
+                  <button type="button" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#ReserveModal">
+                    Reserve Table
+                  </button>
+
                 </div>
             </div>
         </div>
     </header>
+
+
+
+
+<div id="ReserveModal"class="modal fade" role="dialog">
+    <div class="modal-dialog modal-lg" role="content">
+
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Reserve Table </h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body">
+
+                <form id="reserve-table">
+                  <div class="form-group row">
+                    <label for="numguests" class="col-md-2 col-form-label">Number of Guests</label>
+                    <label class="radio-inline col-1">
+                      <input type="radio" name="numguests" checked> 1
+                    </label>
+                    <label class="radio-inline col-1">
+                      <input type="radio" name="numguests"> 2
+                    </label>
+                    <label class="radio-inline col-1">
+                      <input type="radio" name="numguests"> 3
+                    </label>
+                    <label class="radio-inline col-1">
+                      <input type="radio" name="numguests"> 4
+                    </label>
+                    <label class="radio-inline col-1">
+                      <input type="radio" name="numguests"> 5
+                    </label>
+                    <label class="radio-inline col-1">
+                      <input type="radio" name="numguests"> 6
+                    </label>
+                  </div>
+
+                  <div class="form-group row">
+                    <label for="smoking-or-not" class="col-12 col-md-2 col-form-label">Section</label>
+                    <div class="col-sm-5">
+                      <div class="btn-group" data-toggle="buttons">
+                        <label class="btn btn-success active">
+                          <input type="radio" name="section" id="section-non-smoking" autocomplete="off" checked>Non-Smoking
+                        </label>
+                        <label class="btn btn-danger">
+                          <input type="radio" name="section" id="section-smoking" autocomplete="off">Smoking
+                        </label>
+                      </div>
+
+                    </div>
+
+                  </div>
+
+                  <div class="form-group row">
+                    <label for="date-and-time" class="col-12 col-md-2 col-form-label">Date and Time</label>
+                    <div class="col-12 col-md-4">
+                      <input type="text" class="form-control" id="date" name="date" placeholder="Date">
+                    </div>
+                    <div class="col-12 col-md-4">
+                      <input type="text" class="form-control" name="time" id="time" placeholder="Time">
+                    </div>
+                  </div>
+
+                  <div class="form-group row">
+                    <div class="offset-md-2 col-md-10">
+                      <button type="submit" class="btn btn-primary">Reserve</button>
+                    </div>
+                  </div>
+
+                </form>
+
+            </div>
+        </div>
+
+    </div>
+</div>
 
     <div class="container">
       <div class="row row-content">
@@ -302,11 +381,7 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-        $(document).ready(function(){
-            $('[data-toggle="tooltip"]').tooltip();
-        });
-    </script>
+
 </body>
 
 </html>
