--- a/index.html
+++ b/index.html
@@ -100,78 +100,78 @@
 
 
 
-<div id="ReserveModal"class="modal fade" role="dialog">
-    <div class="modal-dialog modal-lg" role="content">
+    <div id="ReserveModal"class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
 
-        <div class="modal-content">
-            <div class="modal-header">
-                <h4 class="modal-title">Reserve Table </h4>
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-            </div>
-            <div class="modal-body">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve Table </h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
 
-                <form id="reserve-table">
-                  <div class="form-group row">
-                    <label for="numguests" class="col-md-2 col-form-label">Number of Guests</label>
-                    <label class="radio-inline col-1">
-                      <input type="radio" name="numguests" checked> 1
-                    </label>
-                    <label class="radio-inline col-1">
-                      <input type="radio" name="numguests"> 2
-                    </label>
-                    <label class="radio-inline col-1">
-                      <input type="radio" name="numguests"> 3
-                    </label>
-                    <label class="radio-inline col-1">
-                      <input type="radio" name="numguests"> 4
-                    </label>
-                    <label class="radio-inline col-1">
-                      <input type="radio" name="numguests"> 5
-                    </label>
-                    <label class="radio-inline col-1">
-                      <input type="radio" name="numguests"> 6
-                    </label>
-                  </div>
-
-                  <div class="form-group row">
-                    <label for="smoking-or-not" class="col-12 col-md-2 col-form-label">Section</label>
-                    <div class="col-sm-5">
-                      <div class="btn-group" data-toggle="buttons">
-                        <label class="btn btn-success active">
-                          <input type="radio" name="section" id="section-non-smoking" autocomplete="off" checked>Non-Smoking
+                    <form id="reserve-table">
+                      <div class="form-group row">
+                        <label for="numguests" class="col-md-2 col-form-label">Number of Guests</label>
+                        <label class="radio-inline col-1">
+                          <input type="radio" name="numguests" checked> 1
                         </label>
-                        <label class="btn btn-danger">
-                          <input type="radio" name="section" id="section-smoking" autocomplete="off">Smoking
+                        <label class="radio-inline col-1">
+                          <input type="radio" name="numguests"> 2
+                        </label>
+                        <label class="radio-inline col-1">
+                          <input type="radio" name="numguests"> 3
+                        </label>
+                        <label class="radio-inline col-1">
+                          <input type="radio" name="numguests"> 4
+                        </label>
+                        <label class="radio-inline col-1">
+                          <input type="radio" name="numguests"> 5
+                        </label>
+                        <label class="radio-inline col-1">
+                          <input type="radio" name="numguests"> 6
                         </label>
                       </div>
 
-                    </div>
+                      <div class="form-group row">
+                        <label for="smoking-or-not" class="col-12 col-md-2 col-form-label">Section</label>
+                        <div class="col-sm-5">
+                          <div class="btn-group" data-toggle="buttons">
+                            <label class="btn btn-success active">
+                              <input type="radio" name="section" id="section-non-smoking" autocomplete="off" checked>Non-Smoking
+                            </label>
+                            <label class="btn btn-danger">
+                              <input type="radio" name="section" id="section-smoking" autocomplete="off">Smoking
+                            </label>
+                          </div>
 
-                  </div>
+                        </div>
 
-                  <div class="form-group row">
-                    <label for="date-and-time" class="col-12 col-md-2 col-form-label">Date and Time</label>
-                    <div class="col-12 col-md-4">
-                      <input type="text" class="form-control" id="date" name="date" placeholder="Date">
-                    </div>
-                    <div class="col-12 col-md-4">
-                      <input type="text" class="form-control" name="time" id="time" placeholder="Time">
-                    </div>
-                  </div>
+                      </div>
 
-                  <div class="form-group row">
-                    <div class="offset-md-2 col-md-10">
-                      <button type="submit" class="btn btn-primary">Reserve</button>
-                    </div>
-                  </div>
+                      <div class="form-group row">
+                        <label for="date-and-time" class="col-12 col-md-2 col-form-label">Date and Time</label>
+                        <div class="col-12 col-md-4">
+                          <input type="text" class="form-control" id="date" name="date" placeholder="Date">
+                        </div>
+                        <div class="col-12 col-md-4">
+                          <input type="text" class="form-control" name="time" id="time" placeholder="Time">
+                        </div>
+                      </div>
 
-                </form>
+                      <div class="form-group row">
+                        <div class="offset-md-2 col-md-10">
+                          <button type="submit" class="btn btn-primary">Reserve</button>
+                        </div>
+                      </div>
 
+                    </form>
+
+                </div>
             </div>
-        </div>
 
+        </div>
     </div>
-</div>
 
     <div class="container">
       <div class="row row-content">
@@ -188,7 +188,7 @@
                 </div>
 
                 <div class="carousel-item">
-                  <img class="d-flex ml-3 img-thumbnail align-self-center"
+                  <img class="d-flex img-fluid"
                           src="img/buffet.png" alt="buffet">
                   <div class="carousel-caption d-none d-md-block">
                     <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW </span></h2>
@@ -197,7 +197,7 @@
                 </div>
 
                 <div class="carousel-item">
-                  <img class="d-flex mr-3 img-thumbnail align-self-center"
+                  <img class="d-flex img-fluid"
                           src="img/alberto.png" alt="Alberto Somayya">
                   <div class="carousel-caption d-none d-md-block">
                     <h2 class="mt-0">Alberto Somayya</h2>
@@ -221,6 +221,14 @@
               <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                   <span class="carousel-control-next-icon"></span>
               </a>
+              <div class="btn-group" id="carouselButton">
+                  <button class="btn btn-danger btn-sm" id="carousel-pause">
+              	    <span class="fa fa-pause"></span>
+                  </button>
+                  <button class="btn btn-danger btn-sm" id="carousel-play">
+              	    <span class="fa fa-play"></span>
+                  </button>
+              </div>
             </div>
         </div>
       </div>
@@ -381,6 +389,17 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script>
+        $(document).ready(function(){
+            $("#mycarousel").carousel( { interval: 5000 } );
+            $("#carousel-pause").click(function(){
+                $("#mycarousel").carousel('pause');
+            });
+            $("#carousel-play").click(function(){
+                $("#mycarousel").carousel('cycle');
+            });
+        });
+    </script>
 
 </body>
 
